force-app/main/default/objects/Online_Volunteer_Training__c/Online_Volunteer_Training__c.object-meta.xml
<CustomObject>
    <label>Online Volunteer Training</label>
    <nameField>
        <label>Online Volunteer Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Online Volunteer Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>