force-app/main/default/objects/Online_Volunteer_Training__c/fields/Changing_climate_affect_your_sport__c.field-meta.xml
<CustomField>
    <fullName>Changing_climate_affect_your_sport__c</fullName>
    <inlineHelpText>How might a changing climate affect your sport?</inlineHelpText>
    <label>Changing climate affect your sport?</label>
    <type>TextArea</type>
</CustomField>