force-app/main/default/objects/Online_Volunteer_Training__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Online Volunteer Trainings</relationshipLabel>
    <relationshipName>Online_Volunteer_Trainings1</relationshipName>
    <type>Lookup</type>
</CustomField>