force-app/main/default/objects/Online_Volunteer_Training__c/fields/Current_level_of_carbon_dioxide__c.field-meta.xml
<CustomField>
    <fullName>Current_level_of_carbon_dioxide__c</fullName>
    <inlineHelpText>What is the current level of carbon dioxide parts per million (PPM) in our atmosphere?</inlineHelpText>
    <label>Current level of carbon dioxide?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>