force-app/main/default/objects/Online_Volunteer_Training__c/fields/First_time_impacted_your_life__c.field-meta.xml
<CustomField>
    <fullName>First_time_impacted_your_life__c</fullName>
    <inlineHelpText>When was the first time you realized climate change impacted your life?</inlineHelpText>
    <label>First time impacted your life?</label>
    <type>TextArea</type>
</CustomField>