force-app/main/default/objects/Online_Volunteer_Training__c/fields/Four_prongs_of_POWs_Policy_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Four_prongs_of_POWs_Policy_Agenda__c</fullName>
    <inlineHelpText>What are the four prongs of POWs Policy Agenda?</inlineHelpText>
    <label>Four prongs of POWs Policy Agenda?</label>
    <type>TextArea</type>
</CustomField>