force-app/main/default/objects/Online_Volunteer_Training__c/fields/How_much_has_your_community_warmed__c.field-meta.xml
<CustomField>
    <fullName>How_much_has_your_community_warmed__c</fullName>
    <inlineHelpText>Based on the map, Professor Elizabeth Burkowski showed, how much has your community warmed? (Hint: this is around minute 3)</inlineHelpText>
    <label>How much has your community warmed?</label>
    <type>TextArea</type>
</CustomField>