force-app/main/default/objects/Online_Volunteer_Training__c/fields/One_volunteer_principle_that_resonated__c.field-meta.xml
<CustomField>
    <fullName>One_volunteer_principle_that_resonated__c</fullName>
    <inlineHelpText>What is one volunteer principle that resonated with you?</inlineHelpText>
    <label>One volunteer principle that resonated?</label>
    <type>TextArea</type>
</CustomField>