force-app/main/default/objects/Online_Volunteer_Training__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <inlineHelpText>What do you like to do outside? What is your sport? Where do you like to do your sport? What is one of your favorite stories about your sport? Who is in your community?</inlineHelpText>
    <label>Question 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>