force-app/main/default/objects/Online_Volunteer_Training__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <inlineHelpText>Challenge, Choice, Outcome: What was a time in your life that you faced a challenge that you might have learned something from or changed who you are? What was a time that you realized that climate change would impact your sport? What was the choice you m</inlineHelpText>
    <label>Question 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>