force-app/main/default/objects/Online_Volunteer_Training__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <inlineHelpText>Telling our community story: what are our shared values as outdoors people? Why is it urgent we solve climate change right now? Why is our community unique to be able to advocate for climate solutions?</inlineHelpText>
    <label>Question 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>