force-app/main/default/objects/Online_Volunteer_Training__c/fields/Three_ways_to_help__c.field-meta.xml
<CustomField>
    <fullName>Three_ways_to_help__c</fullName>
    <inlineHelpText>What are the three ways you can help volunteer for POW?</inlineHelpText>
    <label>Three ways to help volunteer?</label>
    <type>TextArea</type>
</CustomField>