force-app/main/default/objects/Online_Volunteer_Training__c/fields/What_is_POW_s_Vision__c.field-meta.xml
<CustomField>
    <fullName>What_is_POW_s_Vision__c</fullName>
    <inlineHelpText>What is POW’s Vision?</inlineHelpText>
    <label>What is POW’s Vision?</label>
    <type>TextArea</type>
</CustomField>