force-app/main/default/objects/Online_Volunteer_Training__c/fields/what_is_the_value_of_your_state_s_outdoo__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_value_of_your_state_s_outdoo__c</fullName>
    <inlineHelpText>Based on the Outdoor Industry Association report (https://outdoorindustry.org/advocacy/) what is the value of your state’s outdoor recreation economy?</inlineHelpText>
    <label>State’s outdoor recreation economy?</label>
    <type>TextArea</type>
</CustomField>