force-app/main/default/objects/Online_Volunteer_Training__c/fields/What_resonated_with_you__c.field-meta.xml
<CustomField>
    <fullName>What_resonated_with_you__c</fullName>
    <inlineHelpText>What resonated with you from this Passion into Purpose presentation?</inlineHelpText>
    <label>What resonated with you?</label>
    <type>TextArea</type>
</CustomField>